[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hevy-sync"
version = "1.0.0.dev1"
description = "A tool for synchronising Hevy workouts to Garmin Connect."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Lucas Girod", email = "noreply@girod-steiger.ch" },
]
keywords = ["garmin", "hevy", "sync", "fitness"]
classifiers = [
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fit-tool",
  "garminconnect",
  "python-dotenv",
  "requests",
]

[project.urls]
Homepage = "https://github.com/lucasgirod/hevy-sync"
Repository = "https://github.com/lucasgirod/hevy-sync"

[project.scripts]
hevy-sync = "hevy_sync.sync_app:main"

[tool.setuptools.packages.find]
include = ["hevy_sync*"]
