[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hevy-sync"
version = "1.0.0.dev1"
description = "A tool for synchronising Hevy workouts to Garmin Connect."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Lucas Girod", email = "noreply@girod-steiger.ch" },
]
keywords = ["garmin", "hevy", "sync", "fitness"]
classifiers = [
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fit-tool",
  "garmin-auth",
  "garminconnect",
  "curl_cffi",
  "python-dotenv",
  "requests",
  "ua-generator",
]

[project.urls]
Homepage = "https://github.com/lucasgirod/hevy-sync"
Repository = "https://github.com/lucasgirod/hevy-sync"

[project.scripts]
hevy-sync = "hevy_sync.sync_app:main"
hevy-sync-service = "hevy_sync.service:main"

[tool.setuptools.packages.find]
include = ["hevy_sync*"]

[tool.setuptools.package-data]
"hevy_sync.data" = ["*.json"]
